use with gil